Thu Dec 22 17:46:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_NextLine, ASM_DoPass): Simplify code a little bit.

Sat Dec 17 15:42:08 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (Symbol_CreateSymbolOut): Add warning for unused
	imported and undefined exported symbols.
	Move test on mapping symbols to...
	(NeedToOutputSymbol): ...here.  Properly test for
	SYMBOL_REFERENCE and SYMBOL_GLOBAL symbols for determining
	whether they should be outputed or not.
	* symbol.h (SYMBOL_REFERENCE, SYMBOL_GLOBAL): Update comments.

Sat Dec 10 13:39:26 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (ADR_RelocUpdaterCore): Less confusing error message.

Fri Dec  2 02:28:38 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/swi.s: Enhance testcase.
	* m_cpuctrl.c (m_swi): Only give error on Invalid SWI/SVC argument
	during pass 2.
	* symbol.c (symbolPrint): Symbol::areaDef can be NULL.

Fri Dec  2 02:00:02 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* eval.c (evalUnop): Case Op_fsize: Fix FILE handle leak.

Wed Nov 30 03:05:20 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_head): Remove.
	(c_data): Add.
	* commands.h (c_head): Likewise.
	(c_data): Add.
	* decode.c (oDecodeTable): Add DATA.  Remove HEAD, RET, STACK and TAIL. 
	* m_cpuctrl.c (m_stack, m_ret, m_tail): Remove.
	* m_cpuctrl.h (m_stack, m_ret, m_tail): Likewise.

Tue Nov 29 02:23:19 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): Limit KEEP'd symbols to Int and Bool
	types.
	(symFlag): Avoid local/global symbols to be marked for STRONG, KEEP,
	EXPORT or IMPORT.
	* variables.c (declare_var): Tune erorr when symbol was already
	marked for IMPORT, EXPORT, STRONG or KEEP.
	(c_set): Avoid wrong assert when symbol was already marked for
	IMPORT, EXPORT, STRONG or KEEP. 

Sun Nov 27 22:18:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_lnk): Dump literal pool.
